--- a/Dyplom.bib
+++ b/Dyplom.bib
@@ -15,104 +15,124 @@
 %  - inne typy materiałów źródłowych.
 % Więcej informacji na stronie https://www.bibtex.com/
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@online{nextjs,
+  author = {Guillermo Rauch},
+  title  = {Building Modern Web Applications with Next.js},
+  url    = {https://nextjs.org/docs},
+  note   = {Dostęp z dnia 12 grudnia 2024 roku}
+}
+@inproceedings{NLPforNLP,
+  author    = {Mihalcea, Rada
+               and Liu, Hugo
+               and Lieberman, Henry},
+  editor    = {Gelbukh, Alexander},
+  title     = {NLP (Natural Language Processing) for NLP (Natural Language Programming)},
+  booktitle = {Computational Linguistics and Intelligent Text Processing},
+  year      = {2006},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {319--330},
+  abstract  = {Natural Language Processing holds great promise for making computer interfaces that are easier to use for people, since people will (hopefully) be able to talk to the computer in their own language, rather than learn a specialized language of computer commands. For programming, however, the necessity of a formal programming language for communicating with a computer has always been taken for granted. We would like to challenge this assumption. We believe that modern Natural Language Processing techniques can make possible the use of natural language to (at least partially) express programming ideas, thus drastically increasing the accessibility of programming to non-expert users. To demonstrate the feasibility of Natural Language Programming, this paper tackles what are perceived to be some of the hardest cases: steps and loops. We look at a corpus of English descriptions used as programming assignments, and develop some techniques for mapping linguistic constructs onto program structures, which we refer to as programmatic semantics.},
+  isbn      = {978-3-540-32206-1}
+}
 @article{lamport1987document,
-  title={Document Production: Visual or Logical?},
-  author={Lamport, Leslie},
-  journal={Notices of the American Mathematical Society.},
-  pages={621--624},
-  year={1987},
+  title   = {Document Production: Visual or Logical?},
+  author  = {Lamport, Leslie},
+  journal = {Notices of the American Mathematical Society.},
+  pages   = {621--624},
+  year    = {1987}
 }
 @book{fowler2009,
-    author={Mittelbach, Frank and Goossens, Michel and Braams, Johannes and Carlisle, David and Rowley, Chris},
-    title={The LATEX companion},
-    publisher={Addison-Wesley Professional},
-    year={2004},
-    ISBN      = {978-0750685672},
+  author    = {Mittelbach, Frank and Goossens, Michel and Braams, Johannes and Carlisle, David and Rowley, Chris},
+  title     = {The LATEX companion},
+  publisher = {Addison-Wesley Professional},
+  year      = {2004},
+  isbn      = {978-0750685672}
 }
 @book{kopka2003guide,
-  title={Guide to LATEX},
-  author={Kopka, Helmut and Daly, Patrick W},
-  year={2003},
-  publisher={Pearson Education},
+  title     = {Guide to LATEX},
+  author    = {Kopka, Helmut and Daly, Patrick W},
+  year      = {2003},
+  publisher = {Pearson Education}
 }
 @book{diller2001latex,
-  title={LaTeX wiersz po wierszu: zasady i techniki przetwarzania dokument{\'o}w},
-  author={Diller, A. and Je{\l}owicki, J.},
-  isbn={9788371973413},
-  year={2001},
-  publisher={Wydawnictwo Helion},
+  title     = {LaTeX wiersz po wierszu: zasady i techniki przetwarzania dokument{\'o}w},
+  author    = {Diller, A. and Je{\l}owicki, J.},
+  isbn      = {9788371973413},
+  year      = {2001},
+  publisher = {Wydawnictwo Helion}
 }
 @misc{oetiker2022nie,
-  title={Nie za kr{\'o}tkie wprowadzenie do systemu LATEX2$\varepsilon$},
-  author={Oetiker, Tobias and others},
-  year={2022},
-  publisher={Free Software Foundation, Inc},
+  title     = {Nie za kr{\'o}tkie wprowadzenie do systemu LATEX2$\varepsilon$},
+  author    = {Oetiker, Tobias and others},
+  year      = {2022},
+  publisher = {Free Software Foundation, Inc}
 }
 @book{kucharczyk1994wprowadzenie,
-  title={Wprowadzenie do systemu komputerowego sk{\l}adu tekst{\'o}w drukarskich LATEX},
-  author={Kucharczyk, Jerzy},
-  year={1994},
-  publisher={Wydawn. Uniwersytetu Wroc{\l}awskiego},
+  title     = {Wprowadzenie do systemu komputerowego sk{\l}adu tekst{\'o}w drukarskich LATEX},
+  author    = {Kucharczyk, Jerzy},
+  year      = {1994},
+  publisher = {Wydawn. Uniwersytetu Wroc{\l}awskiego}
 }
 @article{knuth1996texbook,
-  title={The TEXbook Addison--Wesley},
-  author={Knuth, Donald},
-  journal={Reading, MA},
-  year={1996}
+  title   = {The TEXbook Addison--Wesley},
+  author  = {Knuth, Donald},
+  journal = {Reading, MA},
+  year    = {1996}
 }
 
 @online{Vellage2017,
-	author = {Claudio Vellage},
-	journal = {LaTeX-Tutorial},
-	title = {Bibliography in LaTeX with Bibtex/Biblatex},
-	url = {https://latex-tutorial.com/tutorials/bibtex/},
-	year = {2017},
+  author  = {Claudio Vellage},
+  journal = {LaTeX-Tutorial},
+  title   = {Bibliography in LaTeX with Bibtex/Biblatex},
+  url     = {https://latex-tutorial.com/tutorials/bibtex/},
+  year    = {2017}
 }
 @article{Cleary2004,
-	author = {Johanna Cleary},
-	issue = {2},
-	journal = {Journal of Radio},
-	title = {Creating Bibliography with Latex},
-	volume = {79},
-	year = {2004},
+  author  = {Johanna Cleary},
+  issue   = {2},
+  journal = {Journal of Radio},
+  title   = {Creating Bibliography with Latex},
+  volume  = {79},
+  year    = {2004}
 }
 
 
 @book{diller2001latex,
-	title={LaTeX wiersz po wierszu: zasady i techniki przetwarzania dokument{\'o}w},
-	author={Diller, A. and Je{\l}owicki, J.},
-	isbn={9788371973413},
-	year={2001},
-	publisher={Wydawnictwo Helion},
+  title     = {LaTeX wiersz po wierszu: zasady i techniki przetwarzania dokument{\'o}w},
+  author    = {Diller, A. and Je{\l}owicki, J.},
+  isbn      = {9788371973413},
+  year      = {2001},
+  publisher = {Wydawnictwo Helion}
 }
 @article{lamport1985latex,
-	title={LATEX--A Document Preparation System Addison--Wesley},
-	author={Lamport, Leslie},
-	journal={Reading, MA},
-	year={1985},
+  title   = {LATEX--A Document Preparation System Addison--Wesley},
+  author  = {Lamport, Leslie},
+  journal = {Reading, MA},
+  year    = {1985}
 }
 @misc{overleaf,
-	author = {Overleaf},
-	title = {Overleaf - Online LaTeX Editor},
-	year = {2024},
-	url = {https://www.overleaf.com/},
+  author = {Overleaf},
+  title  = {Overleaf - Online LaTeX Editor},
+  year   = {2024},
+  url    = {https://www.overleaf.com/}
 }
 @online{ekorekta24,
-	author = {Łukasz Mackiewicz},
-	title = {Interpunkcja w wyliczeniach: przecinki, średniki, a może nic?},
-	year = {2024},
-	url = {https://www.ekorekta24.pl/interpunkcja-w-wyliczeniach-przecinki-sredniki-a-moze-nic/},
+  author = {Łukasz Mackiewicz},
+  title  = {Interpunkcja w wyliczeniach: przecinki, średniki, a może nic?},
+  year   = {2024},
+  url    = {https://www.ekorekta24.pl/interpunkcja-w-wyliczeniach-przecinki-sredniki-a-moze-nic/}
 }
 @online{contentwriter,
-	author = {Justyna Szymczyk-Mielniczyn},
-	title = {Wyliczenia w tekstach},
-	url = {https://contentwriter.pl/wyliczenia-w-tekstach/},
-	note = {Dostęp z dnia 26 stycznia 2024 roku},
+  author = {Justyna Szymczyk-Mielniczyn},
+  title  = {Wyliczenia w tekstach},
+  url    = {https://contentwriter.pl/wyliczenia-w-tekstach/},
+  note   = {Dostęp z dnia 26 stycznia 2024 roku}
 }
 @book{wojcik2015piszke,
-	title={Pisz{\k{e}} akademick{\k{a}} prac{\k{e}} promocyjn{\k{a}}-licencjack{\k{a}}, magistersk{\k{a}}, doktorsk{\k{a}}},
-	author={Wojcik, Krystyna},
-	year={2015},
-	publisher={Wolters Kluwer Polska}
+  title     = {Pisz{\k{e}} akademick{\k{a}} prac{\k{e}} promocyjn{\k{a}}-licencjack{\k{a}}, magistersk{\k{a}}, doktorsk{\k{a}}},
+  author    = {Wojcik, Krystyna},
+  year      = {2015},
+  publisher = {Wolters Kluwer Polska}
 }
 
