--- a/Dyplom.tex
+++ b/Dyplom.tex
@@ -36,7 +36,7 @@
 }
 \album{102488}
 \author{Paweł Niziołek}
-\promotor{prof. dr hab. inż. Szczepan Paszkiel}
+\promotor{dr hab. inż. Szczepan Paszkiel}
 \date{2024}
 \longdate{2023-11-26}
 
