feat: projekt widoki i implementacja front i backend

--- a/Dyplom.tex
+++ b/Dyplom.tex
@@ -47,21 +47,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \streszczeniepracy{
 	
-Praca dyplomowa skupia się na projektowaniu i realizacji szablonu do tworzenia pracy dyplomowej przy użyciu składu tekstu \LaTeX\ . W pracy zostały  przedstawione korzyści korzystania z \LaTeX{a} w porwaniu do innych edytorów tekstu skupiając się na takich rzeczach jak automatyczne formatowania, obsługa bibliograii, profesjonalny wygląd i łatwa edycja struktury dokumentu. Teoretyczna część pracy jest poświęcona przedstawieniu krótkiej historii powstawania \LaTeX{a} oraz  korzyści płynących z korzystania z \LaTeX{a} przy tworzeniu profesjonalnie wyglądających i automatycznie formatujących się prac.
+Aplikacja umożliwia użytkownikom naukę języków obcych poprzez interaktywne fiszki, które są generowane na podstawie napisów do filmów i seriali dostępnych na platformie YouTube oraz z własnych plików użytkownika. Użytkownicy mogą wybierać napisy w różnych językach i na różnych poziomach trudności, co pozwala na dostosowanie nauki do indywidualnych potrzeb. Aplikacja jest dostępna na różnych urządzeniach, co umożliwia naukę w dowolnym miejscu i czasie.
+} 
 
-W praktycznej części pracy przedstawiono stworzony szablon z przedstawieniem jego funkcji oraz możliwością  spersonalizowania  go do indywidualnych potrzeb użytkownika. Opisany zostało również jego proces instalacji i konfiguracji tak aby ułatwić korzystanie z niego innym użytkownikom. 
-} % koniec streszczenia
-
-\slowakluczowe{Skład tekstu \LaTeX, Praca Dyplomowa, Narzędzia i środowiska pracy}
+\slowakluczowe{youtube, napisy, języki obce, fiszki, nauka, aplikacja}
 
 \thesisabstract{
-	
-The thesis focuses on the design and implementation of a template for creating a thesis using \LaTeX text composition. The thesis presents the advantages of using \LaTeX{a} in abduction to other text editors focusing on such things as automatic formatting, bibliography support, professional appearance and easy editing of the document structure. The theoretical part of the work is devoted to presenting a brief history of the creation of \LaTeX{a} and the benefits of using \LaTeX{a} to create professional-looking and automatically formatting works.
 
-The practical part of the work presents a ready-made template with a demonstration of its functions and the possibility of personalizing it to individual user needs. Its installation and configuration process is also described so as to facilitate its use by other users.
+The application allows users to learn foreign languages through interactive flashcards, which are generated based on subtitles to movies and TV series available on the YouTube platform and from the user's own files. Users can choose subtitles in different languages and at different levels of difficulty, which allows them to tailor their learning to their individual needs. The application is available on various devices, which allows learning anywhere and anytime.
+
 } % end of abstract
 
-\thesiskeywords{Text Composition \LaTeX, Dissertation, Tools and working environments.}
+\thesiskeywords{youtube, subtitles, foreign languages, flashcards, learning, application}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Tu zaczyna się dokument
