add: Przypadki uzycia

--- a/Dyplom.tex
+++ b/Dyplom.tex
@@ -36,8 +36,8 @@
 }
 \album{102488}
 \author{Paweł Niziołek}
-\promotor{dr hab. inż. Szczepan Paszkiel}
-\date{2024}
+\promotor{dr hab. inż. Szczepan Paszkiel prof. Uczelni}
+\date{2025}
 \longdate{2023-11-26}
 
 
