--- a/Dyplom.bib
+++ b/Dyplom.bib
@@ -35,6 +35,84 @@
   abstract  = {Natural Language Processing holds great promise for making computer interfaces that are easier to use for people, since people will (hopefully) be able to talk to the computer in their own language, rather than learn a specialized language of computer commands. For programming, however, the necessity of a formal programming language for communicating with a computer has always been taken for granted. We would like to challenge this assumption. We believe that modern Natural Language Processing techniques can make possible the use of natural language to (at least partially) express programming ideas, thus drastically increasing the accessibility of programming to non-expert users. To demonstrate the feasibility of Natural Language Programming, this paper tackles what are perceived to be some of the hardest cases: steps and loops. We look at a corpus of English descriptions used as programming assignments, and develop some techniques for mapping linguistic constructs onto program structures, which we refer to as programmatic semantics.},
   isbn      = {978-3-540-32206-1}
 }
+
+@article{talavan2006using,
+  title     = {Using subtitles to enhance foreign language learning},
+  author    = {Talav{\'a}n Zan{\'o}n, Noa and others},
+  year      = {2006},
+  publisher = {Universidad de Granada}
+}
+
+@inproceedings{kovacs2014smart,
+  title     = {Smart subtitles for vocabulary learning},
+  author    = {Kovacs, Geza and Miller, Robert C},
+  booktitle = {Proceedings of the SIGCHI conference on human factors in computing systems},
+  pages     = {853--862},
+  year      = {2014}
+}
+
+@article{tekalp2023effects,
+  title   = {The Effects of Subtitles on Language Learning},
+  author  = {Tekalp, Selen and Yerlikaya, Serde and Polat, Sibel},
+  journal = {Note},
+  volume  = {2},
+  number  = {1},
+  pages   = {14},
+  year    = {2023}
+}
+
+@article{abusahyon2023ai,
+  title   = {AI-driven Technology and Chatbots as Tools for Enhancing English Language Learning in the Context of Second Language Acquisition: A Review Study},
+  author  = {AbuSahyon, ASAE and Alzyoud, Abdelhadi and Alshorman, Omar and Al-Absi, Basim},
+  journal = {International Journal of Membrane Science and Technology},
+  volume  = {10},
+  number  = {1},
+  pages   = {1209--1223},
+  year    = {2023}
+}
+
+@article{fountoulakis2024evaluating,
+  title   = {Evaluating the impact of AI tools on language proficiency and intercultural communication in second language education},
+  author  = {Fountoulakis, Michail St},
+  journal = {International Journal of Second and Foreign Language Education},
+  volume  = {3},
+  number  = {1},
+  pages   = {12--26},
+  year    = {2024}
+}
+
+@article{bui2023next,
+  title  = {Next. Js for Front-End and Compatible Backend Solutions},
+  author = {Bui, Duy Dinh and Bui, Dinh},
+  year   = {2023}
+}
+
+@book{bugl2024modern,
+  title     = {Modern Full-Stack React Projects: Build, maintain, and deploy modern web apps using MongoDB, Express, React, and Node. js},
+  author    = {Bugl, Daniel},
+  year      = {2024},
+  publisher = {Packt Publishing Ltd}
+}
+
+@article{dinku2022react,
+  title  = {React. js vs. Next. js},
+  author = {Dinku, Zerihun},
+  year   = {2022}
+}
+
+@inproceedings{weng2004approach,
+  title        = {An approach for automatic data virtualization},
+  author       = {Weng, Li and Agrawal, Gagan and Catalyurek, Umit and Kur, T and Narayanan, Sivaramakrishnan and Saltz, Joel},
+  booktitle    = {Proceedings. 13th IEEE International Symposium on High performance Distributed Computing, 2004.},
+  pages        = {24--33},
+  year         = {2004},
+  organization = {IEEE}
+}
+
+%
+% Bibliografia związana z przykladem template LaTeX 
+%
+
 @article{lamport1987document,
   title   = {Document Production: Visual or Logical?},
   author  = {Lamport, Leslie},
