fix Podsumowanie Wnioski

--- a/Dyplom.tex
+++ b/Dyplom.tex
@@ -83,8 +83,8 @@ The application allows users to learn foreign languages through interactive flas
 \clearpage
 \listoffigures
 % Spis tabel
-\clearpage
-\listoftables
+% \clearpage
+% \listoftables
 
 \clearpage
 \lstlistoflistings
