--- a/Dyplom.bib
+++ b/Dyplom.bib
@@ -60,7 +60,7 @@
   pages   = {14},
   year    = {2023}
 }
-
+%%% AI in language learning start
 @article{abusahyon2023ai,
   title   = {AI-driven Technology and Chatbots as Tools for Enhancing English Language Learning in the Context of Second Language Acquisition: A Review Study},
   author  = {AbuSahyon, ASAE and Alzyoud, Abdelhadi and Alshorman, Omar and Al-Absi, Basim},
@@ -80,7 +80,7 @@
   pages   = {12--26},
   year    = {2024}
 }
-
+%%% AI in language learning end
 @article{bui2023next,
   title  = {Next. Js for Front-End and Compatible Backend Solutions},
   author = {Bui, Duy Dinh and Bui, Dinh},
@@ -108,109 +108,36 @@
   year         = {2004},
   organization = {IEEE}
 }
-
-%
-% Bibliografia związana z przykladem template LaTeX 
-%
-
-@article{lamport1987document,
-  title   = {Document Production: Visual or Logical?},
-  author  = {Lamport, Leslie},
-  journal = {Notices of the American Mathematical Society.},
-  pages   = {621--624},
-  year    = {1987}
-}
-@book{fowler2009,
-  author    = {Mittelbach, Frank and Goossens, Michel and Braams, Johannes and Carlisle, David and Rowley, Chris},
-  title     = {The LATEX companion},
-  publisher = {Addison-Wesley Professional},
-  year      = {2004},
-  isbn      = {978-0750685672}
-}
-@book{kopka2003guide,
-  title     = {Guide to LATEX},
-  author    = {Kopka, Helmut and Daly, Patrick W},
-  year      = {2003},
-  publisher = {Pearson Education}
-}
-@book{diller2001latex,
-  title     = {LaTeX wiersz po wierszu: zasady i techniki przetwarzania dokument{\'o}w},
-  author    = {Diller, A. and Je{\l}owicki, J.},
-  isbn      = {9788371973413},
-  year      = {2001},
-  publisher = {Wydawnictwo Helion}
-}
-@misc{oetiker2022nie,
-  title     = {Nie za kr{\'o}tkie wprowadzenie do systemu LATEX2$\varepsilon$},
-  author    = {Oetiker, Tobias and others},
-  year      = {2022},
-  publisher = {Free Software Foundation, Inc}
-}
-@book{kucharczyk1994wprowadzenie,
-  title     = {Wprowadzenie do systemu komputerowego sk{\l}adu tekst{\'o}w drukarskich LATEX},
-  author    = {Kucharczyk, Jerzy},
-  year      = {1994},
-  publisher = {Wydawn. Uniwersytetu Wroc{\l}awskiego}
-}
-@article{knuth1996texbook,
-  title   = {The TEXbook Addison--Wesley},
-  author  = {Knuth, Donald},
-  journal = {Reading, MA},
-  year    = {1996}
+@article{ko2014learner,
+  title     = {Learner perceptions and preferences of device type in vocabulary learning},
+  author    = {Ko, Myong Hee},
+  journal   = {Multimedia-Assisted Language Learning},
+  volume    = {17},
+  number    = {3},
+  pages     = {37--68},
+  year      = {2014},
+  publisher = {한국멀티미디어언어교육학회}
 }
 
-@online{Vellage2017,
-  author  = {Claudio Vellage},
-  journal = {LaTeX-Tutorial},
-  title   = {Bibliography in LaTeX with Bibtex/Biblatex},
-  url     = {https://latex-tutorial.com/tutorials/bibtex/},
-  year    = {2017}
-}
-@article{Cleary2004,
-  author  = {Johanna Cleary},
-  issue   = {2},
-  journal = {Journal of Radio},
-  title   = {Creating Bibliography with Latex},
-  volume  = {79},
-  year    = {2004}
+@article{mallett2012benefits,
+  title     = {The benefits and challenges of using systematic reviews in international development research},
+  author    = {Mallett, Richard and Hagen-Zanker, Jessica and Slater, Rachel and Duvendack, Maren},
+  journal   = {Journal of development effectiveness},
+  volume    = {4},
+  number    = {3},
+  pages     = {445--455},
+  year      = {2012},
+  publisher = {Taylor \& Francis}
 }
 
-
-@book{diller2001latex,
-  title     = {LaTeX wiersz po wierszu: zasady i techniki przetwarzania dokument{\'o}w},
-  author    = {Diller, A. and Je{\l}owicki, J.},
-  isbn      = {9788371973413},
-  year      = {2001},
-  publisher = {Wydawnictwo Helion}
+@article{6827214,
+  title    = {Gamification for Engaging Computer Science Students in Learning Activities: A Case Study},
+  author   = {Ibáñez, María-Blanca and Di-Serio, Ángela and Delgado-Kloos, Carlos},
+  journal  = {IEEE Transactions on Learning Technologies},
+  year     = {2014},
+  volume   = {7},
+  number   = {3},
+  pages    = {291-301},
+  keywords = {Games;Education;Computer languages;Planning;Electronic mail;Communities;E-learning;engagement;game mechanics;game dynamics;gamification},
+  doi      = {10.1109/TLT.2014.2329293}
 }
-@article{lamport1985latex,
-  title   = {LATEX--A Document Preparation System Addison--Wesley},
-  author  = {Lamport, Leslie},
-  journal = {Reading, MA},
-  year    = {1985}
-}
-@misc{overleaf,
-  author = {Overleaf},
-  title  = {Overleaf - Online LaTeX Editor},
-  year   = {2024},
-  url    = {https://www.overleaf.com/}
-}
-@online{ekorekta24,
-  author = {Łukasz Mackiewicz},
-  title  = {Interpunkcja w wyliczeniach: przecinki, średniki, a może nic?},
-  year   = {2024},
-  url    = {https://www.ekorekta24.pl/interpunkcja-w-wyliczeniach-przecinki-sredniki-a-moze-nic/}
-}
-@online{contentwriter,
-  author = {Justyna Szymczyk-Mielniczyn},
-  title  = {Wyliczenia w tekstach},
-  url    = {https://contentwriter.pl/wyliczenia-w-tekstach/},
-  note   = {Dostęp z dnia 26 stycznia 2024 roku}
-}
-@book{wojcik2015piszke,
-  title     = {Pisz{\k{e}} akademick{\k{a}} prac{\k{e}} promocyjn{\k{a}}-licencjack{\k{a}}, magistersk{\k{a}}, doktorsk{\k{a}}},
-  author    = {Wojcik, Krystyna},
-  year      = {2015},
-  publisher = {Wolters Kluwer Polska}
-}
-
